# Valeriyya

./: .gitconfig  .gitignore  Cargo.toml  Procfile  commands.py  package-lock.json  package.json  renovate.json  rust-toolchain.toml  tsconfig.json
.data/: spotify.data
database/: valeriyya.prisma
src/: application.rs  commands.guild.load.ts  commands.load.ts  database.rs  index.ts  main.rs  rpc.rs  structs.rs  utils.rs
src/commands/: index.ts  mod.rs  ping.rs  user.rs
src/commands/info/: help.rs  mod.rs  register.rs  user.rs  user.ts
src/commands/moderation/: ban.rs  ban.ts  cases.rs  history.ts  kick.rs  kick.ts  mod.rs  mute.rs  mute.ts  reason.rs  reason.ts  reference.rs
src/commands/moderation/cases/: cases.ts
src/commands/music/: disconnect.ts  join.rs  leave.rs  loop.ts  loop_music.rs  mod.rs  nowplaying.ts  pause.ts  play.rs  play.ts  queue.ts  remove.ts  resume.ts  skip.rs  skip.ts
src/commands/owner/: eval.ts
src/commands/settings/: mod.rs  settings.rs  settings.ts
src/lib/: ValeriyyaClient.ts  valeriyya.client.ts
src/lib/structures/: Command.ts  Fragment.ts  Listeners.ts
src/lib/util/: Logger.ts  utilityTypes.ts  valeriyya.cases.ts  valeriyya.db.models.ts  valeriyya.db.ts  valeriyya.embed.ts  valeriyya.logger.ts  valeriyya.ms.ts  valeriyya.music.ts  valeriyya.types.ts  valeriyya.util.ts
src/lib/util/database/: valeriyya.db.guild.ts  valeriyya.db.models.prisma  valeriyya.db.settings.ts  valeriyya.db.ts
src/lib/util/database/entities/: Guild.ts
src/lib/util/moderation/: valeriyya.moderation.ban.ts  valeriyya.moderation.kick.ts  valeriyya.moderation.mute.ts  valeriyya.moderation.ts
src/listeners/client/: ready.ts
