[package]
name = "valeriyya"
version = "0.3.0"
edition = "2021"

[profile.release]
codegen-units = 512

[dependencies]
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
chrono = "0.4.19"
serde = "1.0.137"
serde_json = "1.0.81"
regex = "1.5.6"
bson = "2.3.0"
once_cell = "1.7"
reqwest = "0.11.11"
ytextract = "0.11.0"
futures = { version = "0.3.17", features = ["std"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3.15"
tracing-futures = "0.2"

# Serenity Next Branch
[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend", "chrono", "voice", "framework"]
rev = "72c76467dab136f50c2b1739e1945736e4a7ff39"

# Poise Serenity-Next Branch
[dependencies.poise]
git = "https://github.com/serenity-rs/poise"
rev = "ecf4cf5ef2ef578e311facbcd3c26710a1d21195"

[dependencies.mongodb]
version = "2.2.2"
default-features = false
features = ["async-std-runtime"]

# Songbird Symphonia Branch
[dependencies.songbird]
git = "https://github.com/FelixMcFelix/songbird"
features = ["builtin-queue"]
rev = "e7a233c1d67dd585178766a46080b44f73897c59"

[dependencies.symphonia]
features = ["aac", "mp3", "isomp4", "alac", "mkv"] 
git = "https://github.com/FelixMcFelix/Symphonia"
branch = "songbird-fixes"

# # Patching Serenity
# [patch."https://github.com/serenity-rs/serenity"]
# serenity = { version = "0.11.5" }